added a comma in bio

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </p><p>
                 Currently, I'm working as a project leader for <a href="http://www.thisisradical.com">rADical Advertising</a>, as an independent contractor for the <a href="http://digital.pwc.com/experiencecenter/#Peek-Inside">Sandbox at the PwC Experience Center</a>, and occasionally as a freelance web developer. I'm also finishing up my undergraduate degree in Business Analytics and Sustainability at the University of Virginia.
                 </p><p>
-                I'm always looking for new opportunities to leverage my multidisciplinary skillset, especially if those opportunities support a cause I am passionate about like climate change or financial accessibility.
+                I'm always looking for new opportunities to leverage my multidisciplinary skillset, especially if those opportunities support a cause I am passionate about, like climate change or financial accessibility.
                 </p><p>
                 Outside of school and work, I practice Ashtanga yoga, get outdoors whenever I can, and read (lately on a World War 2 Fiction kick).
               </p>
