--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
   <div class="container mainInfo">
     <div class="row">
-      <div class="mainText">
+
+        <!--main screen-->
         <div id="start" class="divs" style="top: 10%; width: 100%;">
             <div class="col-xs-6 col-xs-offset-3 text-center" style="margin-top:-2%;">
               <div class="firstPic">
@@ -57,6 +58,7 @@
             </div>
           </div>
 
+          <!--experience section-->
           <div id="experience" class="divs">
             <div class="row">
               <div class="col-md-5 col-md-offset-1 text-center">
@@ -80,6 +82,8 @@
                     </div>
                   </div>
                 </div>
+
+            <!--portfolio section--> 
                 <div id="portfolio" class="container divs">
                 <div id="page1" class="portfolioDivs">
                   <div class="row">
@@ -146,6 +150,8 @@
                   </div>
                 </div>
               </div>
+              
+              <!--contact section-->
               <div id="contact" class="divs">
                 <div class="col-xs-6 col-xs-offset-3 text-center">
                   <p>I'm always interested in hearing about new opportunities. Reach out at <a href="mailto:trevorhinkle@virginia.edu">trevorhinkle@virginia.edu</a>.</p>
@@ -162,9 +168,6 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-
       </div>
       <div class="footer">
         <p>Designed by Trevor Hinkle, &copy; 2016</p>
